# Capstone_BJE

RoboDoc/: README.md  pyproject.toml  report.md
RoboDoc/src/robodoc/: app.py  crew.py  index.html  main.py
RoboDoc/src/robodoc/config/: agents.yaml  tasks.yaml
