[project]
name = "robodoc"
version = "0.1.0"
description = "RoboDoc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.9.3",
]

[project.scripts]
robodoc = "robodoc.main:run"
run_crew = "robodoc.main:run"
train = "robodoc.main:train"
replay = "robodoc.main:replay"
test = "robodoc.main:test"
run_with_trigger = "robodoc.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
